--- a/projeto-inicial-spotify/css/estilo.css
+++ b/projeto-inicial-spotify/css/estilo.css
@@ -1,14 +1,17 @@
+html, body, #home {
+    height: 100%;
+}
 li.linhaV {
-    margin-top: 25px;
+    margin-top: 28px;
     border-left: 1px solid white;
     height: 17px;
 }
 .paddingNav {
-    padding: 12px 0;
+    padding: 12px 40;
 }
 
 .paddingLink {
-    padding: 20px 0px;
+    padding: 20px 40px;
     
 }
 .transparencia {
@@ -19,4 +22,94 @@ body {
                       url(../imagens/ruido.png),
                       linear-gradient(50deg,#ff4169, #7c26f8);
     background-attachment: fixed;
+    font-family: Helvetica, Arial, sans-serif; }
+    .navbar-dark .navbar-nav .nav-item .nav-link{
+        color: white;
+        font-weight: bold;
+    }
+    .navbar-dark .navbar-nav .nav-item .nav-link:hover {
+    color: #9bf0e1;
+}
+/*Capa
+-----------------------------------------------*/
+.capa {
+    text-align: center;
+}
+
+.btn-custom {
+    color: white; 
+    border-radius: 500px;
+    -webkit-border-radius: 500px;
+    -moz-border-radius: 500px;
+    text-transform: uppercase;
+    transition: background 0.4s, color 0.4s;
+    padding: 10px 20px;
+}
+
+.btn-roxo {
+    background: #7c25f8;
+}
+.btn-roxo:hover {
+    background: #6207e3;
+    color: white;
+}
+
+
+.btn-branco {
+    border: 2px solid white;
+}
+.btn-branco:hover {
+    background: white;
+    color: black;
+}
+
+h1 {
+    font-weight: 900;
+    letter-spacing: -0.05em;
+    color: white;
+    margin-bottom: 50px;
+    
+}
+
+/* Extra small devices (portraist phones, less than 576px) */
+@media (max-width: 575.99px) {
+    h1 {
+        font-size: 3em;
+    }
+    .btn-custom {
+        margin: 10px 15px;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    h1 {
+        font-size: 4em;
+    }
+    .btn-custom {
+        margin: 10px 15px;
+    }
+ }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    h1 {
+        font-size: 5em;
+    }
+    .btn-custom {
+        margin: 10px 15px;
+    }
+ }
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    h1 {
+    font-size: 6em;
+    } 
+}
+
+@media (min-width: 1200px) { 
+    h1 {
+    font-size: 7em;
+    } 
 }
